# mic_db_fill

./: .gitignore  Cargo.toml  LICENSE  README.md  catch_them_all.sh  sample.env
src/: activity.rs  beamtime.rs  data_walker.rs  database.rs  dataset.rs  db_user.rs  main.rs  synco_runs.rs
src/data_walker/: dataset.rs
