[package]
name = "mic_db_fill"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.2"
hdf5 = "0.8.1"
image = "0.25.5"
ndarray = "0.15.6"
reqwest = { version="0.12.12", features =["blocking"]}
walkdir = "2.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
postgres = { version = "0.19.10", features = ["with-chrono-0_4"] }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
tokio =  {version = "1.44.2", features = ["full"]}
clap = { version = "4.5.38", features = ["derive"] }
